test/files/neg/t7519-b.check
Use_2.scala:6: error: type mismatch;
 found   : String
 required: Q
  val x: Q = ex.Mac.mac("asdf")
                       ^
one error found
